unpackaged/objects/LoyaltyProgramParticipant__c.object
<CustomObject>
  <fields>
    <fullName>AcceptedTermsAndConditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted Terms and Conditions</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>AccountPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Account Program Members</relationshipLabel>
    <relationshipName>Account_Program_Members</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Program Members</relationshipLabel>
    <relationshipName>LoyaltyProgramParticipants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>AdvancedProfiling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advanced Profiling</label>
    <referenceTo>AdvancedProfiling__c</referenceTo>
    <relationshipLabel>Account Program Members</relationshipLabel>
    <relationshipName>Account_Program_Members</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Canada_Consultation_Interview_Export__c</fullName>
    <formula>HYPERLINK("/lightning/r/Report/00O6M000008JVUTUA4/view?fv0="&amp;Id,
"Export Details of Interview for Consultation Calculator")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canada Consultation Interview Export</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Equipment with Voucher</fullName>
        </value>
        <value>
          <fullName>Voucher Only</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>ConsumableOrderNumber__c</fullName>
    <label>Consumable Order Number</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Program Members</relationshipLabel>
    <relationshipName>Account_Program_Members</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <lookupFilter>
      <active>true</active>
      <errorMessage>Value does not exist or does not match filter criteria. (Account Type must be a Distributor)</errorMessage>
      <filterItems>
        <field>Account.OneAccount_Type__c</field>
        <operation>equals</operation>
        <value>Distributor, DNA Distributor</value>
      </filterItems>
      <filterItems>
        <field>Account.RecordTypeId</field>
        <operation>equals</operation>
        <value>CIM Account</value>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Program Members (Dealer)</relationshipLabel>
    <relationshipName>Account_Program_Members</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>DistributorRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The contacts available in this lookup must be related 
to the previously selected Distributor (Dealer)</inlineHelpText>
    <label>Distributor Rep</label>
    <lookupFilter>
      <active>true</active>
      <errorMessage>Value does not exist or does not match filter criteria. (The Distributor Rep must be related to the previously selected Dealer)</errorMessage>
      <filterItems>
        <field>$Source.Dealer__c</field>
        <operation>equals</operation>
        <valueField>Contact.AccountId</valueField>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Program Members (Distributor Rep)</relationshipLabel>
    <relationshipName>Account_Program_Members1</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Email__c</fullName>
    <description>Email of the person signing the T&amp;C</description>
    <label>Email</label>
    <type>Email</type>
  </fields>
  <fields>
    <fullName>EquipmentInvoiceNumber__c</fullName>
    <label>Equipment Invoice Number</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Random string generated on insert. Used as external id to be sent out via email to customers to not expose the real Salesforce Id.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>FirstName__c</fullName>
    <description>First Name of the person agreeing to the T&amp;C.</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>LastName__c</fullName>
    <description>Last Name of the person signing the T&amp;C</description>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Level__c</fullName>
    <description>https://dentsplysirona.lightning.force.com/lightning/r/Project__c/a1T6M0000050T5yUAE/view</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Subtype__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>SureSmile Advantage Starter</fullName>
        </value>
        <value>
          <fullName>SureSmile Advantage Omni</fullName>
        </value>
        <value>
          <fullName>SureSmile Advantage Omni+</fullName>
        </value>
        <value>
          <fullName>SureSmile Advantage Prime</fullName>
        </value>
        <value>
          <fullName>SureSmile Advantage Prime+</fullName>
        </value>
        <value>
          <fullName>SureSmile Advantage Pro</fullName>
        </value>
        <value>
          <fullName>SureSmile Advantage Pro+</fullName>
        </value>
        <value>
          <fullName>SureSmile Advantage LegenDS</fullName>
        </value>
        <value>
          <fullName>SureSmile Advantage LegenDS+</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>LoyaltyProgram__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Program</label>
    <referenceTo>LoyaltyProgram__c</referenceTo>
    <relationshipLabel>Account Program Members</relationshipLabel>
    <relationshipName>LoyaltyProgramParticipants</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Membership_Expiry_Date__c</fullName>
    <label>Membership Expiry Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>PaymentPreference__c</fullName>
    <label>Payment Preference</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Subtype__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Quarterly Payouts</fullName>
        </value>
        <value>
          <fullName>Annual Rebate Voucher</fullName>
        </value>
        <value>
          <fullName>Annual Cash Payout</fullName>
        </value>
        <value>
          <fullName>Annual Product Credit Voucher</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>PracticeName__c</fullName>
    <description>Practice Name of the person signing the T&amp;C.</description>
    <label>Practice Name</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PurchaseDateOfEquipment__c</fullName>
    <label>Purchase Date of Equipment</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>RemitAddress__c</fullName>
    <description>TFUS-000002383</description>
    <label>Remit-To Address</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>SalesRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Program_Members</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <defaultValue>'Pending'</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Open</fullName>
        </value>
        <value>
          <fullName>Pending</fullName>
        </value>
        <value>
          <fullName>Active</fullName>
        </value>
        <value>
          <fullName>Inactive</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>SubscribeDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date of subscription</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Subtype__c</fullName>
    <description>https://dentsplysirona.lightning.force.com/lightning/r/Project__c/a1T6M0000050T5yUAE/view</description>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Account_Program_Subtype</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>TermsAndConditionsConsentDate__c</fullName>
    <label>Terms and Conditions Consent Date</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>TermsAndConditionsDocumentLink__c</fullName>
    <description>Link to the T&amp;C document that the customer accepted</description>
    <inlineHelpText>Link to the T&amp;C document that the customer accepted</inlineHelpText>
    <label>Terms and Conditions Document Link</label>
    <type>Url</type>
  </fields>
  <fields>
    <fullName>UniqueRecordIdentifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Populated by process builder. Only one member per account and account program allowed.</description>
    <externalId>true</externalId>
    <label>Unique Record Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>VoucherType__c</fullName>
    <label>Voucher Type</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Endo</fullName>
        </value>
        <value>
          <fullName>Ortho</fullName>
        </value>
        <value>
          <fullName>Resto</fullName>
        </value>
        <value>
          <fullName>Implants</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>Account Program Member</label>
  <nameField>
    <displayFormat>LPP-{0000}</displayFormat>
    <label>Account Program Member Name</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Account Program Members</pluralLabel>
  <recordTypes>
    <active>true</active>
    <fullName>Clinical_Accelerator</fullName>
    <label>Clinical Accelerator</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <fullName>Loyalty_Program</fullName>
    <label>Loyalty Program</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <fullName>Pricing_Discount_Program</fullName>
    <label>Pricing/Discount Program</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <fullName>Rewards_Program</fullName>
    <label>Rewards Program</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <fullName>Standard_Program</fullName>
    <label>Standard Program</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <fullName>Subscription_Program</fullName>
    <label>Subscription Program</label>
  </recordTypes>
  <sharingModel>ControlledByParent</sharingModel>
  <validationRules>
    <fullName>VR_DigitalWorkflow</fullName>
    <active>true</active>
    <description>Prevents activation if a field in the Digital Workflow section has not been populated.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = 'Loyalty_Program'
  ,ISPICKVAL(Account__r.Country__c,"CA")
  ,ISPICKVAL(Status__c,"Active")
  ,OR(
  	ISPICKVAL(LoyaltyProgram__r.Subtype__c,"One DS")
    ,ISPICKVAL(LoyaltyProgram__r.Subtype__c,"One DS Pro")
    ,ISPICKVAL(LoyaltyProgram__r.Subtype__c,"One DSO")
  )
  ,OR(
    ISBLANK(TEXT(AdvancedProfiling__r.GuidedImplantPlacement__c))
    ,ISBLANK(TEXT(AdvancedProfiling__r.ImplantRestoration__c))
    ,ISBLANK(TEXT(AdvancedProfiling__r.Crowns__c))
    ,ISBLANK(TEXT(AdvancedProfiling__r.Bridges__c))
    ,ISBLANK(TEXT(AdvancedProfiling__r.ClearAlignerTherapyOrtho__c))
    ,ISBLANK(TEXT(AdvancedProfiling__r.Appliances__c))
  )
)</errorConditionFormula>
    <errorMessage>You need to complete the Digital Workflow section to set the Status as Active</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>VR_FuturePracticePlans</fullName>
    <active>true</active>
    <description>Prevents setting the status as Active if the Future Practice Plans section has not been completed</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = 'Loyalty_Program'
  ,ISPICKVAL(Account__r.Country__c,"CA")
  ,ISPICKVAL(Status__c,"Active")
  ,OR(
  	ISPICKVAL(LoyaltyProgram__r.Subtype__c,"One DS")
    ,ISPICKVAL(LoyaltyProgram__r.Subtype__c,"One DS Pro")
    ,ISPICKVAL(LoyaltyProgram__r.Subtype__c,"One DSO")
  )
  ,OR(
  ISBLANK(TEXT(AccountPlan__r.AddSurgicalOperatory__c))
  ,ISBLANK(TEXT(AccountPlan__r.HygieneOperatory__c))
  ,ISBLANK(TEXT(AccountPlan__r.PurchasingExistingPractice__c))
  ,ISBLANK(TEXT(AccountPlan__r.OpeningNewPractice__c))
  ,ISBLANK(TEXT(AccountPlan__r.Relocating__c))
  ,ISBLANK(TEXT(AccountPlan__r.AddingAssociates__c))
  ,ISBLANK(TEXT(AccountPlan__r.DigitalScanner__c))
  ,ISBLANK(TEXT(AccountPlan__r.MillOven__c))
  ,ISBLANK(TEXT(AccountPlan__r.CBCT3D__c))
  ,ISBLANK(TEXT(AccountPlan__r.Pan__c))
  ,ISBLANK(TEXT(AccountPlan__r.ChairDeliverySystemTreatmentCent__c))
	)
)</errorConditionFormula>
    <errorMessage>You need to complete the Future Practice Plans section to set the Status as Active</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>VR_ModifyAPorAP</fullName>
    <active>true</active>
    <description>Account plan and Advanced profiling cannot be modified.
TFUS-000003419: Excluded System Admin profile from the rule</description>
    <errorConditionFormula>AND(NOT( $User.Profile__c = '#System: System Administrator' ),RecordType.DeveloperName = 'Loyalty_Program'
,ISPICKVAL(Account__r.Country__c,"CA")
,OR(ISCHANGED( AccountPlan__c ) , 
ISCHANGED(  AdvancedProfiling__c  )))</errorConditionFormula>
    <errorMessage>You're not allowed to remove or modify the associated account plan or advanced Profiling record attached to this record.</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>VR_PreventativeAndRestorative</fullName>
    <active>true</active>
    <description>Prevents setting the status as Active if the Preventative and Restorative section has not been completed.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = 'Loyalty_Program'
	,ISPICKVAL(Account__r.Country__c,"CA")
  ,ISPICKVAL(Status__c,"Active")
  ,OR(
  	ISPICKVAL(LoyaltyProgram__r.Subtype__c,"One DS")
    ,ISPICKVAL(LoyaltyProgram__r.Subtype__c,"One DS Pro")
    ,ISPICKVAL(LoyaltyProgram__r.Subtype__c,"One DSO")
  )
  ,OR(
  ISBLANK(AdvancedProfiling__r.ofFillingsClassIMonth__c)
  ,ISBLANK(AdvancedProfiling__r.ofFillingsClassIIMonth__c)
  ,ISBLANK(AdvancedProfiling__r.ofFillingsClassIIIIVVMonth__c)
  ,ISBLANK(AdvancedProfiling__r.OfCrownsMonth__c)
  ,ISBLANK(AdvancedProfiling__r.OfBridgesMonth__c)
  ,ISBLANK(TEXT(AdvancedProfiling__r.Composite__c))
  ,ISBLANK(TEXT(AdvancedProfiling__r.CoreBuildUpMaterials__c))
  ,ISBLANK(TEXT(AdvancedProfiling__r.MatrixMaterials__c))
  ,ISBLANK(TEXT(AdvancedProfiling__r.FinishingPolishing__c))
  ,ISBLANK(TEXT(AdvancedProfiling__r.ImpressionMaterials__c))
  ,ISBLANK(TEXT(AdvancedProfiling__r.Cement__c))
  ,ISBLANK(TEXT(AdvancedProfiling__r.CADCAMBlocks__c))
  ,ISBLANK(TEXT(AdvancedProfiling__r.BoneRegenerative__c))
  ,ISBLANK(TEXT(AdvancedProfiling__r.Anesthetic__c))
  ,ISBLANK(TEXT(AdvancedProfiling__r.Adhesive__c))
  ,ISBLANK(TEXT(AdvancedProfiling__r.TemporaryFillingMaterials__c))
  ,ISBLANK(TEXT(AdvancedProfiling__r.ProphyPaste__c))
  ,ISBLANK(TEXT(AdvancedProfiling__r.FluorideVarnish__c))
  ,ISBLANK(TEXT(AdvancedProfiling__r.CavitronInserts__c))
  ,ISBLANK(TEXT(AdvancedProfiling__r.ImplantAbutmentsCoverScrews__c))
  ,ISBLANK(TEXT(AdvancedProfiling__r.PlasticsForAppliances__c))
	)
)</errorConditionFormula>
    <errorMessage>You need to complete the Preventative and Restorative section to set the Status as Active</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>VR_TermsAndConditionsAccepted</fullName>
    <active>true</active>
    <description>Prevents setting the Status to Active if the customer has not accepted the T&amp;C</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = 'Loyalty_Program'
,ISPICKVAL(Account__r.Country__c,"CA")
    ,ISPICKVAL(Status__c,"Active")
    ,NOT(AcceptedTermsAndConditions__c)
)</errorConditionFormula>
    <errorMessage>The customer needs to accept the Terms and Conditions to set the Status as Active</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>VR_UpdatePaymentPreferences</fullName>
    <active>true</active>
    <description>TFUS-000003676</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(PaymentPreference__c),
NOT(CONTAINS($Profile.Name, 'CRM Analyst')),
NOT(CONTAINS($Profile.Name, '#System:'))
)</errorConditionFormula>
    <errorDisplayField>PaymentPreference__c</errorDisplayField>
    <errorMessage>You cannot change the payment preferences. Ask your admin for details.</errorMessage>
  </validationRules>
</CustomObject>